apps/gallery-backend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-gallery-backend
spec:
  selector:
    app: wedding-gallery-backend
  ports:
    - port: 1080
      targetPort: 1080
      name: http-api
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: wedding-gallery-db
spec:
  selector:
    app: wedding-gallery-db
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
      protocol: TCP
  type: ClusterIP
